--- a/templates/vegetables/veggies.html
+++ b/templates/vegetables/veggies.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Nginx Test</title>
+    <title>Fruits</title>
   </head>
   <body>
-    <h1>Nginx Test</h1>
-    <script>
-      console.log(window.location.pathname);
-    </script>
+    <ul>
+      <li>Lettuce</li>
+      <li>Eggplant</li>
+      <li>Onion</li>
+    </ul>
   </body>
 </html>
